tests/structurals/ill-typed/bool.stella
language core;
extend with #structural-patterns, #sum-types;

fn main(input : Bool) -> Bool {
  return
    match input {
      true => false
   }
}
